Changed index.scss code to fix issues when app on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,15 @@
+html, body {
+  overflow: hidden;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
   font-family: 'arsenal sc',sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  overflow: hidden;
 }
 
 code {
